--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -45,7 +45,7 @@ end
 # Gems used only for assets and not required
 # in production environments by default.
 group :assets do
-  gem 'sass-rails', '>= 4.0.3'
+  gem 'sassc-rails'
   gem 'coffee-rails', '~> 4.0'
 
   # See https://github.com/sstephenson/execjs#readme for more supported runtimes
